openshift-specifications/vote-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: vote
  labels:
    app: voting-app
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: vote
  type: ClusterIP
